--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -27,9 +27,9 @@
   <div class="col-md-6">
     <h3>Day 3</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
+      <tr> <td>09:00</td>  <td>Plotting and Programming in Python (Continued)</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Version Control with Git (Continued)</td> </tr>
+      <tr> <td>11:00</td>  <td>Version Control with Git</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:00</td>  <td>Version Control with Git (Continued)</td> </tr>
       <tr> <td>14:00</td>  <td>Wrap-up</td> </tr>
