--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -3,7 +3,7 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io/shell-novice">Automating Tasks with the Unix Shell</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
@@ -15,7 +15,7 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Plotting and Programming in Python</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder">Plotting and Programming in Python</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>11:00</td>  <td>Plotting and Programming in Python (Continued)</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
@@ -29,7 +29,7 @@
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Plotting and Programming in Python (Continued)</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Version Control with Git</td> </tr>
+      <tr> <td>11:00</td>  <td><a href="http://swcarpentry.github.io/git-novice">Version Control with Git</a></td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:00</td>  <td>Version Control with Git (Continued)</td> </tr>
       <tr> <td>14:00</td>  <td>Wrap-up</td> </tr>
